# loseme

./: .dockerignore  .drone.yml  .gitignore  .reposcribe_ignore  .sync_a73a9e6d63ce.db-wal  2  README.md  chunks_config.json  docker-compose.client.yml  docker-compose.server.yml  docker-compose.yml  docker-compose.yml.new  log.los  output.html  pyproject.toml  pytest.ini  run_tests.sh  setup.cfg
api/: Dockerfile
ci/: Dockerfile
client/: Dockerfile  Dockerfile.pi  pyproject.toml
client/cli/: config.py  ingest.py  main.py  sources.py
client/extractors/: __init__.py  eml_extractor.py  html_extractor.py  pdf_extractor.py  plaintext_extractor.py  python_extractor.py  registry.py  thunderbird_extractor.py
client/ingest/: queue_client.py
client/preview/: __init__.py  models.py  registry.py
client/preview/generators/: eml.py  plaintext.py  thunderbird.py
client/sources/base/: docker_path_translation.py
client/sources/filesystem/: __init__.py  filesystem_model.py  filesystem_source.py
client/sources/thunderbird/: __init__.py  thunderbird_model.py  thunderbird_source.py
client/web/: main.py  preview_proxy.py
client/web/static/: app.js
client/web/static/previews/: email.js  fallback.js  index.js  pdf.js  plaintext.js
client/web/static/styles/: base.css  components.css  layout.css  runs.css  search.css
client/web/static/views/: index.html  index.js  search.js  storage.js
clients/loseme_gui/: CMakeLists.txt
clients/loseme_gui/src/: apiclient.cpp  apiclient.h  ingestdialog.cpp  ingestdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  runscontroller.cpp  runscontroller.h  searchwidget.cpp  searchwidget.h  sourceswidget.cpp  sourceswidget.h
clients/loseme_gui/src/models/: documentpart.h  indexingscope.h  runstatus.h
core/: Dockerfile  pyproject.toml
docker/: docs.Dockerfile
docs/: Makefile  (+7 more)
server/: Dockerfile  Dockerfile.pi  pyproject.toml  requirements.txt  wiring.py
server/api/app/: audit_orphan_chunks.py  cache.py  main.py  repair_chunker_migration.py
server/api/app/core/: auth.py
server/api/app/routes/: __init__.py  chunks.py  database.py  documents.py  ingest.py  llm.py  queue.py  runs.py  search.py  sources.py
server/pipeline/chunking/: semantic_chunker.py  sentence_chunker.py  simple_chunker.py
server/pipeline/embeddings/: bgem3.py  dummy.py  nomic.py  sentence_transformer.py
server/preview/: __init__.py  registry.py
server/preview/generators/: __init__.py  eml.py  plaintext.py  thunderbird.py
server/scripts/: clean_qdrant.py  inspect_chunks.py
server/storage/metadata_db/: db.py  document_parts.py  document_parts_queue.py  indexing_runs.py  models.py  monitor_sources.py  search_sessions.py  sources.py
server/storage/metadata_db/migrations/: 009_add_chunker_name_and_version.py  010_drop_chunker_from_queue.py  011_add_devide_id_column_to_source_table.py
server/storage/vector_db/: in_memory.py  migrations.py  qdrant_store.py  qdrant_store_hybrid.py  runtime.py  vector_store.py
(+226 files in other folders)
