[project]
name = "loseme"
version = "0.1.0"
description = ""
authors = [
    {name = "HeuserB",email = "benheuser@t-online.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.21.1,<0.22.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
