[tool.poetry]
name = "loseme"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
httpx = ">=0.28.1,<0.29.0"
typer = ">=0.24.1,<0.25.0"
loseme-core = {path = "./core", develop = true}
pypdf = "^6.9.2"
bs4 = "^0.0.2"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
