[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loseme-client"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "httpx",
    "typer",
    "pypdf",
    "python-docx",
    "beautifulsoup4",
    "lxml",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sources*", "extractors*", "ingest*", "cli*", "web*", "preview*"]
